# GFPackage

./: .gitignore  README.md  pyproject.toml  run_historic.py
archive/app/: __init__.py
archive/app/configs/: __init__.py  pathConfigs.py
archive/app/core/: pageContext.py
archive/app/enbridge/artifacts/: __init__.py  azureDump.py  dirsFile.py  push2Cloud.py  runnerContext.py
archive/app/enbridge/enbridgescrape/: __init__.py
archive/app/utils/: errorDetails.py  logHandler.py
archive/updates/: Meta_Munge.ipynb  NN_Munge.ipynb  OA_Munge.ipynb  SG_Munge.ipynb  SG_Munge.py
docs/: ARCHITECTURE.md  architecture.excalidraw
logs/: Enbridge_fails.csv
reports/2026-03-12/: audit_20260312_121223.html
reports/2026-03-15/: audit_20260315_091216.html  audit_20260315_091823.html
reports/2026-03-21/: audit_20260321_175506.html  audit_20260321_180004.html
src/app/: __init__.py  registry.py  reporter.py  runner.py
src/app/base/: __init__.py  munger.py  pusher.py  scraper.py  types.py
src/app/core/: __init__.py  azure_tables.py  browser.py  cloud.py  delta.py  errors.py  logging.py  paths.py  settings.py  transforms.py
src/app/pipelines/enbridge/: __init__.py  config.py  gold_munger.py  pusher.py  (+3 more)
src/artifacts/configFiles/: AllLocsInitial.csv  LocConfigs.parquet  LocMetadata.csv  NNLocMeta.csv  OALocMeta.csv  PipeConfigs.parquet  SegmentConfigs.parquet  enbrdge_2026-03-30_availability.pkl  enbrdge_2026-03-31_availability.pkl  metaLocs.csv
updates/: Meta_Munge.ipynb  Meta_Munge.py  NN_Munge.ipynb  NN_Munge.py  OA_Munge.ipynb  OA_Munge.py  checking.ipynb
(+25 files in other folders)
